web browsing agent
Signed-off-by: cris-m <cris_munzihirwa@hotmail.com>

--- a/vision_agent/vision_agent.ipynb
+++ b/vision_agent/vision_agent.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "8eea5150-e277-4b9b-b312-411dbe9bedb5",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "aca91d9b-580f-4e04-8779-787e7c786fa4",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "c77fb548-0fed-45f1-ba9e-848c5f07ab84",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "id": "49347652-f177-466a-b1cb-3e03c83f7dc1",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "id": "6f913417-be6b-465d-8a91-620f1cb94dd0",
    "metadata": {},
    "outputs": [],
@@ -145,6 +145,7 @@
     "model = ChatOllama(\n",
     "        base_url=\"http://localhost:11434\",\n",
     "        model=\"llama3.2-vision\",\n",
+    "        # model=\"llava:7b\",\n",
     "        temperature=0,\n",
     "        streaming=True\n",
     "    )"
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "id": "1d171088-67bf-435c-b10b-f348c9926a3c",
    "metadata": {},
    "outputs": [],
@@ -190,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "id": "19313860-bc86-4a86-8e9e-b8f333c893bc",
    "metadata": {},
    "outputs": [],
@@ -205,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "id": "1c68cb64-e668-4a80-845e-31149971eba7",
    "metadata": {},
    "outputs": [],
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "id": "b30ce728-18a9-44b2-be0c-5546e9a8ef19",
    "metadata": {},
    "outputs": [],
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 25,
    "id": "5a90b8ea-0dcb-449c-9404-1b74d89ff328",
    "metadata": {},
    "outputs": [],
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 26,
    "id": "59909047-19f7-41d9-b9d3-cd2ab1f32832",
    "metadata": {},
    "outputs": [
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 27,
    "id": "1b902c4e-91a2-454d-b0fb-e229d2288f5f",
    "metadata": {},
    "outputs": [],
@@ -297,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 28,
    "id": "0f456a6c-7871-42ce-9052-f60cb2696f8d",
    "metadata": {},
    "outputs": [
@@ -347,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 29,
    "id": "81183a79-277d-46dc-b537-4a6e38f9864e",
    "metadata": {},
    "outputs": [
@@ -397,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 30,
    "id": "d2d2a44a-6291-4005-8a35-e8ee55008fd7",
    "metadata": {},
    "outputs": [
@@ -461,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3167efd0-56d5-46ef-bf3c-ceb4cf7ba994",
+   "id": "62e1c807-df51-47ee-a28d-a489b7fac9b8",
    "metadata": {},
    "outputs": [],
    "source": []
