--- a/voice_agent/voice_agent.ipynb
+++ b/voice_agent/voice_agent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "b368f7ea-62f4-408f-b88e-205786626542",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "0cfa2674-5958-4c93-99b8-2c44a60200e4",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a6fcf5aa-e042-4475-b4ee-18f55197cc7d",
    "metadata": {},
    "outputs": [
@@ -76,10 +76,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "id": "300bc0f6-a155-47ac-8098-6a55ca52aec3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████| 461M/461M [00:23<00:00, 20.4MiB/s]\n"
+     ]
+    }
+   ],
    "source": [
     "import ssl\n",
     "import torch\n",
@@ -88,7 +96,7 @@
     "ssl._create_default_https_context = ssl._create_unverified_context\n",
     "\n",
     "device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
-    "whisper_model = whisper.load_model(\"base\", device=device)"
+    "whisper_model = whisper.load_model(\"small\", device=device)"
    ]
   },
   {
@@ -101,27 +109,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "983e60d3-744d-4ec7-8f7c-b28d732f0fac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cloning into 'Kokoro-82M'...\n",
+      "remote: Enumerating objects: 140, done.\u001b[K\n",
+      "remote: Counting objects: 100% (136/136), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (136/136), done.\u001b[K\n",
+      "remote: Total 140 (delta 63), reused 0 (delta 0), pack-reused 4 (from 1)\u001b[K\n",
+      "Receiving objects: 100% (140/140), 60.13 KiB | 10.02 MiB/s, done.\n",
+      "Resolving deltas: 100% (63/63), done.\n",
+      "Filtering content: 100% (17/17), 820.18 MiB | 33.83 MiB/s, done.\n"
+     ]
+    }
+   ],
    "source": [
     "!git clone https://huggingface.co/hexgrad/Kokoro-82M"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d78c2ec6-c468-49f8-865f-82cee85d4fc6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/crixus/Documents/langgraph_examples/voice_assistance/Kokoro-82M\n"
+     ]
+    }
+   ],
    "source": [
     "%cd Kokoro-82M"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 64,
    "id": "059db49e-56e6-4a8a-a08d-12089ccbc86b",
    "metadata": {},
    "outputs": [],
@@ -137,7 +168,7 @@
     "    'af_bella', 'af_sarah', 'am_adam', 'am_michael',\n",
     "    'bf_emma', 'bf_isabella', 'bm_george', 'bm_lewis',\n",
     "    'af_nicole', 'af_sky',\n",
-    "][0]\n",
+    "][9]\n",
     "VOICEPACK = torch.load(f'voices/{VOICE_NAME}.pt', weights_only=True).to(device)"
    ]
   },
@@ -151,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 65,
    "id": "2280e21a-bb31-4d6f-b897-58209602255a",
    "metadata": {},
    "outputs": [],
@@ -163,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 66,
    "id": "97df9c2c-9e0a-4693-9423-8fe8c9a8ea2b",
    "metadata": {},
    "outputs": [],
@@ -181,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 67,
    "id": "7ece955d-38a1-4fb1-9a5f-bf58d02b519f",
    "metadata": {},
    "outputs": [],
@@ -198,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 68,
    "id": "28e914d2-5e5e-4742-8025-031a1f1d67d9",
    "metadata": {},
    "outputs": [],
@@ -216,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 69,
    "id": "12ce6020-1e0c-4b4c-8e9d-a6ef5e54ab4f",
    "metadata": {},
    "outputs": [],
@@ -251,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 70,
    "id": "7f57ae36-721d-4a19-9832-e1660aeb1c45",
    "metadata": {},
    "outputs": [],
@@ -274,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 71,
    "id": "3ea85abf-4a27-4c23-8644-216c1f2c7c1c",
    "metadata": {},
    "outputs": [],
@@ -300,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 72,
    "id": "f5561ac1-9e43-4d77-8224-3c2863e65ff5",
    "metadata": {},
    "outputs": [],
@@ -313,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 73,
    "id": "b78d545c-e4b6-465f-ba12-fce398187a96",
    "metadata": {},
    "outputs": [],
@@ -388,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 74,
    "id": "a4a3d277-477d-4b4b-9738-81cead981844",
    "metadata": {},
    "outputs": [],
@@ -459,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 75,
    "id": "3f00c5ef-e549-4b42-b884-11138a9b11b7",
    "metadata": {},
    "outputs": [],
@@ -475,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 76,
    "id": "42e34c5a-d332-4132-b93f-59fc2c1d81d1",
    "metadata": {},
    "outputs": [],
@@ -508,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 77,
    "id": "fd1dc8ce-0560-496e-afe9-374b244a8e8a",
    "metadata": {},
    "outputs": [
@@ -542,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 84,
    "id": "6b5adc8f-e668-4bc4-a240-2e69b925b8b9",
    "metadata": {},
    "outputs": [],
@@ -553,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 86,
    "id": "2a4138d9-8faa-4a1a-a13b-40499a71b371",
    "metadata": {},
    "outputs": [
@@ -578,36 +609,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Here is the transcription:  What is the latest news about AI?\n",
+      "Here is the transcription:  Create a poem about rabbits.\n",
       "================================\u001b[1m Human Message \u001b[0m=================================\n",
       "\n",
-      " What is the latest news about AI?\n",
+      " Create a poem about rabbits.\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  duckduckgo_results_json (a6f8977a-d248-4dbf-ad25-f220650a7c42)\n",
-      " Call ID: a6f8977a-d248-4dbf-ad25-f220650a7c42\n",
+      "  generate_poem (2cfaf529-46d1-49c1-a955-ca76341fd92a)\n",
+      " Call ID: 2cfaf529-46d1-49c1-a955-ca76341fd92a\n",
       "  Args:\n",
-      "    query: latest news AI\n",
+      "    k: 5\n",
+      "    n: 10\n",
+      "    p: rabbits\n",
       "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
-      "Name: duckduckgo_results_json\n",
+      "Name: generate_poem\n",
       "\n",
-      "snippet: Teaching AI to communicate sounds like humans do. Inspired by the human vocal tract, a new AI model can produce and understand vocal imitations of everyday sounds. The method could help build new sonic interfaces for entertainment and education. January 9, 2025. Read full story →, title: Artificial intelligence | MIT News | Massachusetts Institute of Technology, link: https://news.mit.edu/topic/artificial-intelligence2, snippet: AI (Artificial Intelligence) letters and robot hand are placed on computer motherboard in this illustration taken, June 23, 2023. ... Reuters, the news and media division of Thomson Reuters, is ..., title: AI News | Latest Headlines and Developments | Reuters, link: https://www.reuters.com/technology/artificial-intelligence/, snippet: Artificial Intelligence News. Everything on AI including futuristic robots with artificial intelligence, computer models of human intelligence and more., title: Artificial Intelligence News -- ScienceDaily, link: https://www.sciencedaily.com/news/computers_math/artificial_intelligence/, snippet: Google made significant strides in AI in December, releasing Gemini 2.0, their most capable model yet, and introducing new AI video and image generation models, Veo 2 and Imagen 3. They also upgraded NotebookLM, added AI features to Android and Pixel, and shared five AI trends for businesses in 2025., title: The latest AI news we announced in December - The Keyword, link: https://blog.google/technology/ai/google-ai-updates-december-2024/\n",
+      "Error: generate_poem is not a valid tool, try one of [duckduckgo_results_json].\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "\n",
-      "The latest news about AI includes several significant developments. According to MIT News, a new AI model has been created that can produce and understand vocal imitations of everyday sounds, which could help build new sonic interfaces for entertainment and education.\n",
+      "Here's a poem about rabbits:\n",
       "\n",
-      "Additionally, Google has made notable strides in AI in December, releasing Gemini 2.0, their most capable model yet, and introducing new AI video and image generation models, Veo 2 and Imagen 3. They have also upgraded NotebookLM and added AI features to Android and Pixel.\n",
+      "In sun-kissed meadows, they love to play,\n",
+      "Rabbits dancing, on a warm summer day.\n",
+      "Their fur so soft, their eyes so bright,\n",
+      "They hop and leap, with joyful delight.\n",
       "\n",
-      "For more information on the latest AI news and developments, you can visit the websites of Reuters, ScienceDaily, or The Keyword, which provide comprehensive coverage of the latest advancements in artificial intelligence.\n",
+      "With twitching noses, they sniff the air,\n",
+      " Searching for carrots, without a care.\n",
+      "Their little paws, move quick as can be,\n",
+      "As they explore, wild and free.\n",
       "\n",
-      "Sources:\n",
+      "In burrows deep, they find their nest,\n",
+      "A cozy haven, where they can rest.\n",
+      "Their families close, they snuggle in tight,\n",
+      "A bundle of love, on a peaceful night.\n",
       "\n",
-      "* MIT News: \"Artificial intelligence | MIT News | Massachusetts Institute of Technology\"\n",
-      "* Reuters: \"AI News | Latest Headlines and Developments | Reuters\"\n",
-      "* ScienceDaily: \"Artificial Intelligence News -- ScienceDaily\"\n",
-      "* The Keyword: \"The latest AI news we announced in December - The Keyword\"\n",
-      "\n",
-      "Note: The information provided is based on the tool call results and may not be exhaustive or up-to-date.\n",
+      "With gentle hearts, and playful ways,\n",
+      "Rabbits bring joy, to brighten up our days.\n",
+      "So let's cherish these creatures so dear,\n",
+      "And appreciate, their presence here.\n",
       "Starting text processing with smaller chunks...\n"
      ]
     }
